--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,32 @@
     background-color: #21325a;
 }
 
+.header2 {
+    padding: .5px;
+    background-color:#f8f8f8;
+    border-bottom-style: solid;
+    border-color: #f1f1f1;
+}
+
+.box {
+    border-color: #f1f1f1;
+    border-style: solid;
+}
+
 h1 {color: white;
     font-size: 30px;
 }
 
 h2 {color: black;
-    font-size: 20px;
+    font-size: 18px;
+}
+
+.text {
+
+    width: 100%;
+}
+
+form {
+
+    width: 80%;
 }
